# prompt-color-tool

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
src/: lib.rs  main.rs  theme_maps.rs
tests/: env_tests.rs  hostname_color_tests.rs  output_tests.rs  rgb_tests.rs
