[package]
name = "prompt-color-tool"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Wagstrom <patrick@wagstrom.net>"]
license = "MIT"
repository = "https://github.com/pridkett/prompt-color-tool"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "rust", "prompt", "terminal", "color"]
description = "A tool for generating terminal prompt colors based on machine hostname"
homepage = "https://github.com/pridkett/prompt-color-tool"

[lib]
name = "prompt_color_tool"
path = "src/lib.rs"

[[bin]]
name = "prompt-color-tool"
path = "src/main.rs"

[profile.release]
opt-level = 3            # Optimize for size, or you can use `3` for highest performance
lto = true               # Enable Link-Time Optimization for better performance
codegen-units = 1        # Helps improve optimization at the cost of compilation time
debug = false            # Strip out debug symbols to minimize the size
panic = "abort"          # Smaller binary by avoiding panic unwind code
strip = true            # this breaks Linux -> MacOS cross compilation

[dependencies]
base16ct = "0.2.0"
clap = "4.5.21"
hex-literal = "0.4.1"
md-5 = "0.10"
once_cell = "1.20.2"

[package.metadata.deb]
maintainer = "Patrick Wagstrom <patrick@wagstrom.net>"
copyright = "2023-2024, Patrick Wagstrom <patrick@wagstrom.net>"
license-file = ["LICENSE", "0"]
extended-description = """
A command-line tool for generating terminal prompt colors.
Helps create visually distinct prompts for different hosts and environments.
"""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/prompt-color-tool", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/prompt-color-tool/README.md", "644"],
    ["LICENSE", "usr/share/doc/prompt-color-tool/LICENSE", "644"],
]
